connect infrastructure with web

--- a/AspNetCoreTemplate.Web/appsettings.json
+++ b/AspNetCoreTemplate.Web/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=AspNetCoreTemplate-1;Integrated Security=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
