--- a/AspNetCoreTemplate.Web/AspNetCoreTemplate.Web.csproj
+++ b/AspNetCoreTemplate.Web/AspNetCoreTemplate.Web.csproj
@@ -1,8 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Filters\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AspNetCoreTemplate.Common\AspNetCoreTemplate.Common.csproj" />
+    <ProjectReference Include="..\AspNetCoreTemplate.Core\AspNetCoreTemplate.Core.csproj" />
+    <ProjectReference Include="..\AspNetCoreTemplate.Infrastructure\AspNetCoreTemplate.Infrastructure.csproj" />
+  </ItemGroup>
 
 
 
