add connection to db

--- a/AspNetCoreTemplate.Web/appsettings.json
+++ b/AspNetCoreTemplate.Web/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=AspNetCoreTemplate-1;Integrated Security=True;",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AspNetCoreTemplateDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
