add user and role seeder

--- a/AspNetCoreTemplate.Web/AspNetCoreTemplate.Web.csproj
+++ b/AspNetCoreTemplate.Web/AspNetCoreTemplate.Web.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\AspNetCoreTemplate.Infrastructure\AspNetCoreTemplate.Infrastructure.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
 </Project>
