--- a/AspNetCoreTemplate.Web/appsettings.json
+++ b/AspNetCoreTemplate.Web/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AspNetCoreTemplateDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AspNetCoreTemplateDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdminEmail": "admin@template.com",
+    "AdminPassword": "secretPassword1+"
   },
   "Logging": {
     "LogLevel": {
